--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "telegram",
     "deezer"
   ],
-  "repository": "https://github.com/breakdowns/deegram",
+  "repository": "https://github.com/melanddd/deegram",
   "success_url": "https://github.com/breakdowns/deegram",
   "website": "https://github.com/breakdowns/deegram",
   "env": {
